--- a/src/_default.scss
+++ b/src/_default.scss
@@ -14,19 +14,19 @@ $screen-md: '992px' !default;
 $screen-lg: '1200px' !default;
 
 @mixin breakpoint($class) {
-	@if $class == xs {
+	@if $class == 'xs' {
 		@media (max-width: $screen-xs) { @content; }
 	}
 
-	@else if $class == sm {
+	@else if $class == 'sm' {
 		@media (min-width: $screen-sm) { @content; }
 	}
 
-	@else if $class == md {
+	@else if $class == 'md' {
 		@media (min-width: $screen-md) { @content; }
 	}
 
-	@else if $class == lg {
+	@else if $class == 'lg' {
 		@media (min-width: $screen-lg) { @content; }
 	}
 
